--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
         <title>Site</title>
     </head>
     <body>
-        <h1>Hello, world</h1>
+        <h1>The earth is flat</h1>
+
+        <picture><img src="https://apilgriminnarnia.files.wordpress.com/2014/03/discworld-atuin-from-film.jpg?w=640"</picture>
 
     </body>
 </html>
