--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
         <title>Site</title>
     </head>
     <body>
-        <h1>The earth is flat</h1>
+        <h1>Turtle earth is factually correct</h1>
 
         <picture><img src="https://apilgriminnarnia.files.wordpress.com/2014/03/discworld-atuin-from-film.jpg?w=640"</picture>
-        
+        <p>As you can see from my NASA photos the earth is flat, it is mounted on the back of a giant turtle named Rizzlord the First, as he flies around the sun
+        </p>
     </body>
 </html>
