--- a/index.html
+++ b/index.html
@@ -4,13 +4,18 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Site</title>
+        <title>Trustworthy website</title>
     </head>
     <body>
         <h1>Turtle earth is factually correct</h1>
-
+        
+        <h4>Rare apollo 13 footage colorized cerca 1590</h4>
         <picture><img src="https://apilgriminnarnia.files.wordpress.com/2014/03/discworld-atuin-from-film.jpg?w=640"</picture>
-        <p>As you can see from my NASA photos the earth is flat, it is mounted on the back of a giant turtle named Rizzlord the First, as he flies around the sun
-        </p>
+       
+        <p>Rare apollo -1 footage colorized</p>
+
+        <button type="button">Learn more</button>
+
+
     </body>
 </html>
