--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     </head>
     <body>
         <h1>How to Bake Instant Regret</h1>
-        <p>These cookies are sure to fill you with instant regret. You will bite into them and ask yourseolf, why?</p>
+        <p>These cookies are sure to fill you with instant regret.<br>
+             You will bite into them and ask yourself, why?</p>
         <h2>Ingredients</h2>
         <ul>
         <li> A commitment to pain</li>
