border might work??????

--- a/index.html
+++ b/index.html
@@ -52,12 +52,19 @@
 
     </body>
     <style>
+        hr {
+            color: black;
+            border-width: 20px;
+            border: black;
+        }
         body {
-            background-color: rgba(58, 197, 197, 0.733);
-          }
-        img {
+            background-color: rgb(117, 171, 179);
+            }
+       
+          img {
             width: 45%;
             float:right
             }
+        
     </style>
 </html>
