--- a/Bad Cookies Project 1/index.html
+++ b/Bad Cookies Project 1/index.html
@@ -62,6 +62,7 @@
             color: black;
             border-width: 20px;
             border: black;
+            border-style: double;
         }
         body {
             background-color: rgb(117, 171, 179);
