--- a/Bad Cookies Project 1/index.html
+++ b/Bad Cookies Project 1/index.html
@@ -32,7 +32,7 @@
         <li> 1 teaspoon baking soda</li>
         <li> 1 teaspoon salt</li>
         </ul>
-        
+        <br/>
         <hr>
         <h2 id="standard"> How to bake</h2>
         <ol>
@@ -60,9 +60,9 @@
     <style>
         hr {
             color: black;
-            border-width: 20px;
+            border-width: 30px;
             border: black;
-            border-style: double;
+            border-style: solid;
         }
         body {
             background-color: rgb(117, 171, 179);
