--- a/Project 3/index.html
+++ b/Project 3/index.html
@@ -12,12 +12,11 @@
     <body>
         <h1>My Favorite movies</h1>
         <ul> This list is in no particular order</ul>
-        <li>The karate kid</li>
-        <li>Ace ventura pet detective</li>
-        <li>Rocky 4</li>
-        <li>Groundhogs day</li>
+        <li><a href="#movie1" a>The karate kid </a></li>
+        <li><a href="#movie2" a> Ace Ventura Pet Detective </a></li>
+        <li><a href="#movie3" a> Rocky 4 </a></li>
+        <li><a href="#movie4" a> Groundhogs day </a></li>
         <hr>
-        
         <div id="movie1">
             <h2>The Karate Kid</h2>
             <img src="/Ratings project 3/Photos/KarateKid.jpg">
