--- a/Project 4/index.html
+++ b/Project 4/index.html
@@ -5,11 +5,11 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Recreating a website</title>
-        <link rel="stylesheet" type="text/css" href="/Ratings project 4/styles/styles.css" />
+        <link rel="stylesheet" type="text/css" href="/Project 4/styles/styles.css" />
     </head>
     <body>
         <h1>Project 1.04</h1>
-        <br />
-        <h1>Recreating a website</h1>
+        <i><h1> Recreating a website</h1></i>
+        <img id="html_css" src="/Project 4/Photos/html-css.jpg"
     </body>
 </html>
