--- a/Project 4/index.html
+++ b/Project 4/index.html
@@ -8,8 +8,28 @@
         <link rel="stylesheet" type="text/css" href="/Project 4/styles/styles.css" />
     </head>
     <body>
-        <h1>Project 1.04</h1>
-        <i><h1> Recreating a website</h1></i>
-        <img id="html_css" src="/Project 4/Photos/html-css.jpg"
+        <div id="bold">
+            <center>
+            
+                <h1>Project 1.04</h1>
+                <i><h1>Recreating a website</h1></i>
+                <img src="/Project 4/Photos/html-css.jpg" />
+                <h3>By Mr. Felix Apfaltrer</h3>
+                <h2>A review of HTML</h2>
+                <p>HTML is really a very simple scripting language. It consists of ordinary text, with elements that are enclosed by "<" and ">" characters. <br> The best part about HTML is that once we knowhow to effectively use basic elements, we can look up how to use all of the others!</p>
+            </center> 
+            <hr>
+            <h3><u>Headings</u></h3>
+            <h1>This is a size "1" heading</h1>
+            <h2>This is a size "2" heading</h2>
+            <h3>This is a size "3" heading</h3>
+            <h4>This is a size "4" heading</h4>
+            <h5>This is a size "5" heading</h5>
+            <hr>
+        </div>
+        <h3>Lists</h3>
+        <ol>Below is an example if a nested-list, using both an ordered list and an unoredered list</ol>
+            <li>First</li>
     </body>
+
 </html>
