--- a/Project 4/index.html
+++ b/Project 4/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" type="text/css" href="/Project 4/styles/styles.css" />
     </head>
     <body>
-        <div id="bold">
+        <div id="head">
             <center>
                 <h1>Project 1.04</h1>
                 <i><h1>Recreating a website</h1></i>
@@ -20,6 +20,8 @@
                     The best part about HTML is that once we knowhow to effectively use basic elements, we can look up how to use all of the others!
                 </p>
             </center>
+        </div>
+        <div id="headings">
             <hr />
             <h3><u>Headings</u></h3>
             <h1>This is a size "1" heading</h1>
@@ -29,10 +31,54 @@
             <h5>This is a size "5" heading</h5>
             <hr />
         </div>
-        <h3>Lists</h3>
-        <ol>
-            Below is an example if a nested-list, using both an ordered list and an unoredered list
-        </ol>
-        <li>First</li>
+        <div id="list">
+            <h3>Lists</h3>
+            <ol>
+                Below is an example if a nested-list, using both an ordered list and an unoredered list
+                <li>First</li>
+                <li>Second</li>
+                <li>
+                    Third
+                    <ul>
+                        <li>3<sup>rd</sup> Place</li>
+                        <li>Tres</li>
+                    </ul>
+                </li>
+                <li>Fourth</li>
+            </ol>
+            <hr />
+        </div>
+        <div id="links">
+        <h3>Links</h3>
+        <p>
+            Links are very useful, and help users to quickly navigate to new pages, borh within and outside of the current website<br />
+            For instance, they can quickly direct users to <a href="https://www.google.com/webhp?hl=en&sa=X&ved=0ahUKEwi7pZ7kyYH_AhV7kIkEHfvJBwIQPAgJ&safe=active&ssui=on" target="_blank">Google's Homepage</a> <br />
+            <a href="mailto:fapfaltrer@mamkschools.org" target="_blank">Emails</a> can also be easily sent through the use of links <br />
+            <a href="#bold"> They can even bring user to a certain place within a webpage</a>
+        </p>
+        <hr />
+    </div>
+        <div id="Images">
+            <h3>Images</h3>
+            <img id="mamo" src="/Project 4/Photos/mamaroneck.jpg" />
+            <p>
+                Sometimes we wat to go ahead and alaign pictures to the left of text. Using the "align" attribute, with a value of "left" is a <br />
+                perfect way to do this. You could also align the picture to the right of text by replacing the value in the "align" attribute to "right".
+            </p>
+            <div id="breaks">
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+            </div>
+            <p id="mamo-text">Thanks to Mr. Sheldon Brown for the inspiration of this website</p>
+        </div>
     </body>
 </html>
